k8s/dev/todo-list-02.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: "2024-07-30T08:22:41Z"
  generation: 1
  labels:
    app: todo-list-02
  name: todo-list-02
  namespace: app-react
  resourceVersion: "1411130"
  uid: d3160049-940f-4ac5-b4e0-804de3e6004e
spec:
  progressDeadlineSeconds: 600
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: todo-list-02
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: todo-list-02
    spec:
      containers:
      - image: faelsouz/todo-list-reactjs-app:1.1
        imagePullPolicy: IfNotPresent
        name: todo-list-reactjs-app
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2024-07-30T08:23:03Z"
    lastUpdateTime: "2024-07-30T08:23:03Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 1
  readyReplicas: 1
  replicas: 3
  updatedReplicas: 1
